Create app for 'Never Have I Ever' game

--- a/app.json
+++ b/app.json
@@ -21,10 +21,22 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anhelina.kuziv.firstapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "01439ca5-15ac-4a97-9aaf-4e073a3f745e"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/01439ca5-15ac-4a97-9aaf-4e073a3f745e"
     }
   }
 }
